--- a/admin.html
+++ b/admin.html
@@ -34,44 +34,58 @@
             aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-user"></i> Moje konto </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-            <a class="dropdown-item" href="login.html">Zaloguj</a>
+            <a class="dropdown-item" href="logout.html">Wyloguj</a>
           </div>
         </li>
       </ul>
     </div>
   </nav>
   <!-- Content -->
-  <div class=" animated jumbotron text-center pt-5 mb-0 fadeInLeft">
-    <!-- Title -->
-    <h2 class="card-title h2 pb-5  my-4">Wypełnij ankiete</h2>
-    <!-- Subtitle -->
-    <div class="md-form input-group mb-3">
-      <input type="text" class="form-control" placeholder="Tutaj wpisz kod ankiety" aria-label="Recipient's username"
-        aria-describedby="MaterialButton-addon2">
-    </div>
-    <div class="input-group-append">
-      <button class="btn btn-md btn-secondary m-0 px-2" type="button" id="MaterialButton-addon2">Akceptuj</button>
-    </div>
-  </div>
-  <div class="animated jumbotron text-center mt-0 fadeInRight ">
-    <!-- Title -->
-    <h2 class="card-title h2 pb-5">Wygeneruj kod</h2>
-    <div class="md-form input-group mb-3">
-      <input type="text" class="form-control" placeholder="Tutaj wpisz kod" aria-label="Recipient's username"
-        aria-describedby="MaterialButton-addon2">
-    </div>
-    <div class="input-group-append">
-      <button class="btn btn-md btn-secondary m-0 px-2" type="button" id="MaterialButton-addon2">Generuj</button>
-    </div>
-  </div>
-  <!-- Footer -->
-  <footer class="page-footer font-small unique-color-dark pt-4">
-    <div class="container">
-      <div class=" text-center py-3">© 2020 Copyright
-        <a href="index.html">Dominik Ustupski & Tomasz Siedlecki</a>
+ <!-- Hidden -->
+  <div class="row d-flex justify-content-center modalWrapper">
+    <div class="modal fade addNewInputs" id="modalAdd" tabindex="-1" role="dialog" aria-labelledby="modalAdd"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header text-center">
+            <h4 class="modal-title w-100 font-weight-bold text-primary ml-5">Dodaj nową ankiete</h4>
+            <button type="button" class="close text-primary" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body mx-3">
+            <div class="md-form mb-5">
+              <input type="text" id="inputName" class="form-control validate" required>
+              <label data-error="wrong" data-success="right" for="inputName">Nazwa testu</label>
+            </div>
+          </div>
+          <div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
+            <button class="btn btn-custom btn-block buttonAdd" data-dismiss="modal">Dodaj
+              <i class="fas fa-paper-plane-o ml-1"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-  </footer>
+
+  <div class="container">
+    <h2 class=" h1 pb-5">Twoje ankiety   <a class="text-success" data-toggle="modal" data-target="#modalAdd"><i class="pl-5 fas fa-plus fa-1x" aria-hidden="true"></i></a></h2>
+  </div>
+  <table id="myTable" class="table table-striped table-responsive-md btn-table">
+  <thead>
+    <tr>
+      <td> Lp. </td>
+      <td> Nazwa </td>
+
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+
+    </tr>
+  </tbody>
+  </table>
+
   <!-- End project -->
 
   <!-- jQuery -->
@@ -83,7 +97,7 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.js"></script>
   <!-- Your custom scripts (optional) -->
-  <script type="text/javascript"></script>
+  <script type="text/javascript" src="js/create_table.js">></script>
 
 </body>
 </html>
