--- a/login.html
+++ b/login.html
@@ -41,37 +41,22 @@
     </div>
   </nav>
   <!-- Content -->
-  <div class=" animated jumbotron text-center pt-5 mb-0 fadeInLeft">
-    <!-- Title -->
-    <h2 class="card-title h2 pb-5  my-4">Wypełnij ankiete</h2>
-    <!-- Subtitle -->
-    <div class="md-form input-group mb-3">
-      <input type="text" class="form-control" placeholder="Tutaj wpisz kod ankiety" aria-label="Recipient's username"
-        aria-describedby="MaterialButton-addon2">
-    </div>
-    <div class="input-group-append">
-      <button class="btn btn-md btn-secondary m-0 px-2" type="button" id="MaterialButton-addon2">Akceptuj</button>
-    </div>
+
+  <div class=" animated jumbotron text-center pt-5 fadeInLeft">
+    <form class="text-center border border-light p-5" action="#!">
+
+      <p class="h4 mb-4">Zaloguj się! </p>
+      <!-- Email -->
+      <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+
+      <!-- Password -->
+      <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+
+      <!-- Sign in button -->
+        <button class="btn btn-md btn-secondary m-0 px-2" type="button" id="MaterialButton-addon2">Zaloguj</button>
+  </form>
   </div>
-  <div class="animated jumbotron text-center mt-0 fadeInRight ">
-    <!-- Title -->
-    <h2 class="card-title h2 pb-5">Wygeneruj kod</h2>
-    <div class="md-form input-group mb-3">
-      <input type="text" class="form-control" placeholder="Tutaj wpisz kod" aria-label="Recipient's username"
-        aria-describedby="MaterialButton-addon2">
-    </div>
-    <div class="input-group-append">
-      <button class="btn btn-md btn-secondary m-0 px-2" type="button" id="MaterialButton-addon2">Generuj</button>
-    </div>
-  </div>
-  <!-- Footer -->
-  <footer class="page-footer font-small unique-color-dark pt-4">
-    <div class="container">
-      <div class=" text-center py-3">© 2020 Copyright
-        <a href="index.html">Dominik Ustupski & Tomasz Siedlecki</a>
-      </div>
-    </div>
-  </footer>
+
   <!-- End project -->
 
   <!-- jQuery -->
