change color, button

--- a/index.html
+++ b/index.html
@@ -41,27 +41,28 @@
     </div>
   </nav>
   <!-- Content -->
-  <div class=" animated jumbotron text-center pt-5 mb-0 fadeInLeft">
-    <!-- Title -->
-    <h2 class="card-title h2 pb-5  my-4">Wypełnij ankiete</h2>
-    <!-- Subtitle -->
-    <div class="md-form input-group mb-3">
-      <input type="text" class="form-control" placeholder="Tutaj wpisz kod ankiety" aria-label="Recipient's username"
-        aria-describedby="MaterialButton-addon2">
-    </div>
-    <div class="input-group-append">
-      <button class="btn btn-md btn-secondary m-0 px-2" type="button" id="MaterialButton-addon2">Akceptuj</button>
-    </div>
-  </div>
-  <div class="animated jumbotron text-center mt-0 fadeInRight ">
-    <!-- Title -->
-    <h2 class="card-title h2 pb-5">Wygeneruj kod</h2>
-    <div class="md-form input-group mb-3">
-      <input type="text" class="form-control" placeholder="Tutaj wpisz kod" aria-label="Recipient's username"
-        aria-describedby="MaterialButton-addon2">
-    </div>
-    <div class="input-group-append">
-      <button class="btn btn-md btn-secondary m-0 px-2" type="button" id="MaterialButton-addon2">Generuj</button>
+  <div class="container pb-5">
+    <div class=" animated jumbotron text-center pt-5 mb-0 fadeInLeft">
+      <!-- Title -->
+      <h2 class="card-title h2 pb-5  my-4">Wypełnij ankiete</h2>
+      <!-- Subtitle -->
+      <div class="md-form input-group mb-3">
+        <input type="text" class="form-control" placeholder="Tutaj wpisz kod ankiety" aria-label="Recipient's username"
+          aria-describedby="MaterialButton-addon2">
+      </div>
+      <div class="input-group-append pb-5">
+        <button class="mx-auto btn btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Akceptuj</button>
+      </div>
+
+      <!-- Title -->
+      <h2 class="card-title h2 pt-5 pb-5">Wygeneruj kod</h2>
+      <div class="md-form input-group mb-3">
+        <input type="text" class="form-control" placeholder="Tutaj wpisz kod" aria-label="Recipient's username"
+          aria-describedby="MaterialButton-addon2">
+      </div>
+      <div class="input-group-append pb-5">
+        <button class="mx-auto btn btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Generuj</button>
+      </div>
     </div>
   </div>
   <!-- Footer -->
