--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
   </nav>
   <!-- Content -->
 
-  <div class=" animated jumbotron text-center pt-5 fadeInLeft">
+  <div class=" animated jumbotron text-center pt-5 fadeInUp">
     <form class="text-center border border-light p-5" action="#!">
 
       <p class="h4 mb-4">Zaloguj się! </p>
@@ -53,7 +53,7 @@
       <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
 
       <!-- Sign in button -->
-        <button class="btn btn-md btn-secondary m-0 px-2" type="button" id="MaterialButton-addon2">Zaloguj</button>
+        <button class="btn btn-md btn-custom m-0 px-1" type="button" id="MaterialButton-addon2">Zaloguj</button>
   </form>
   </div>
 
