--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           aria-describedby="MaterialButton-addon2">
       </div>
       <div class="input-group-append pb-5">
-        <button class="mx-auto btn btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Akceptuj</button>
+        <button class="mx-auto btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Akceptuj</button>
       </div>
 
       <!-- Title -->
@@ -61,7 +61,7 @@
           aria-describedby="MaterialButton-addon2">
       </div>
       <div class="input-group-append pb-5">
-        <button class="mx-auto btn btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Generuj</button>
+        <button class="mx-auto btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Generuj</button>
       </div>
     </div>
   </div>
