--- a/login.html
+++ b/login.html
@@ -45,15 +45,15 @@
   <div class=" animated jumbotron text-center pt-5 fadeInUp">
     <form class="text-center border border-light p-5" action="#!">
 
-      <p class="h4 mb-4">Zaloguj się! </p>
+      <p class="h4 mb-4">Zaloguj się!</p>
       <!-- Email -->
-      <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+      <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Login">
 
       <!-- Password -->
-      <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+      <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Hasło">
 
       <!-- Sign in button -->
-        <button class="btn btn-md btn-custom m-0 px-1" type="button" id="MaterialButton-addon2">Zaloguj</button>
+        <button class="mx-auto btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Zaloguj</button>
   </form>
   </div>
 
