--- a/admin.html
+++ b/admin.html
@@ -29,13 +29,8 @@
     </button>
     <div class="collapse navbar-collapse pr-5" id="navbarSupportedContent-4">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user"></i> Moje konto </a>
-          <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-            <a class="dropdown-item" href="logout.html">Wyloguj</a>
-          </div>
+        <li class="nav-item">
+            <a class="navbar-brand" href="logout.html">Wyloguj</a>
         </li>
       </ul>
     </div>
@@ -70,7 +65,7 @@
 
   <div class="container">
     <h2 class=" h1 pb-5">Twoje ankiety   <a class="text-success" data-toggle="modal" data-target="#modalAdd"><i class="pl-5 fas fa-plus fa-1x" aria-hidden="true"></i></a></h2>
-  </div>
+
   <table id="myTable" class="table table-striped table-responsive-md btn-table">
   <thead>
     <tr>
@@ -85,6 +80,7 @@
     </tr>
   </tbody>
   </table>
+</div>
 
   <!-- End project -->
 
