--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <!-- Start project -->
   <!-- Navbar -->
-  <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color pb-5" >
+  <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color pb-3" >
     <a class="navbar-brand" href="index.html"><i class="fas fa-1x fa-magic  pl-5 pr-2 "></i> AnkietyOnline</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
       aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
     </div>
   </nav>
   <!-- Content -->
-  <div class="container pb-5">
+  <div class="container pb-5 pt-5">
     <div class=" animated jumbotron text-center pt-5 mb-0 fadeInLeft">
       <!-- Title -->
       <h2 class="card-title h2 pb-5  my-4">Wypełnij ankiete</h2>
@@ -53,7 +53,8 @@
       <div class="input-group-append pb-5">
         <button class="mx-auto btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Akceptuj</button>
       </div>
-
+    </div>
+    <div class=" animated jumbotron text-center pt-5 mb-0 fadeInRight">
       <!-- Title -->
       <h2 class="card-title h2 pt-5 pb-5">Wygeneruj kod</h2>
       <div class="md-form input-group mb-3">
