--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 <body>
   <!-- Start project -->
   <!-- Navbar -->
-  <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color pb-5" >
+  <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color pb-3" >
     <a class="navbar-brand" href="index.html"><i class="fas fa-1x fa-magic  pl-5 pr-2 "></i> AnkietyOnline</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
       aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,22 +41,22 @@
     </div>
   </nav>
   <!-- Content -->
+  <div class="container pb-5 pt-5">
+    <div class=" animated jumbotron text-center pt-5 fadeInUp">
+      <form class="text-center p-5" action="#!">
 
-  <div class=" animated jumbotron text-center pt-5 fadeInUp">
-    <form class="text-center border border-light p-5" action="#!">
+        <p class="h4 mb-4">Zaloguj się!</p>
+        <!-- Email -->
+        <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Login">
 
-      <p class="h4 mb-4">Zaloguj się!</p>
-      <!-- Email -->
-      <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Login">
+        <!-- Password -->
+        <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Hasło">
 
-      <!-- Password -->
-      <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Hasło">
-
-      <!-- Sign in button -->
-        <button class="mx-auto btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Zaloguj</button>
-  </form>
+        <!-- Sign in button -->
+          <button class="mx-auto btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Zaloguj</button>
+    </form>
+    </div>
   </div>
-
   <!-- End project -->
 
   <!-- jQuery -->
