--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,7 @@
 <body>
   <!-- Start project -->
   <!-- Navbar -->
-  <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color pb-5" >
+  <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color pb-3" >
     <a class="navbar-brand" href="index.html"><i class="fas fa-1x fa-magic  pl-5 pr-2 "></i> AnkietyOnline</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
       aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-  <div class="container">
+  <div class="container pb-5 pt-5">
     <h2 class=" h1 pb-5">Twoje ankiety   <a class="text-success" data-toggle="modal" data-target="#modalAdd"><i class="pl-5 fas fa-plus fa-1x" aria-hidden="true"></i></a></h2>
 
   <table id="myTable" class="table table-striped table-responsive-md btn-table">
