--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,10 @@
     <div class="collapse navbar-collapse pr-5" id="navbarSupportedContent-4">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="navbar-brand" href="logout.html">Wyloguj</a>
+            <a class="navbar-brand" href="admin2.html" >Panel administratora</a>
+        </li>
+        <li class="nav-item">
+            <a class="navbar-brand" onclick="return logout()" >Wyloguj</a>
         </li>
       </ul>
     </div>
@@ -48,14 +51,16 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body mx-3">
-            <div class="md-form mb-5">
-              <input type="text" id="inputName" class="form-control validate" required>
-              <label data-error="wrong" data-success="right" for="inputName">Nazwa testu</label>
+          <form id="QForm" name="QForm" method="POST" class="text-center p-5">
+            <div class="modal-body mx-3">
+              <div class="md-form mb-5">
+                  <input type="text" id="QName" name="QName" class="form-control validate" required>
+                  <label data-error="wrong" data-success="right" for="inputName">Nazwa testu</label>
+              </div>
             </div>
-          </div>
+          </form>
           <div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
-            <button class="btn btn-custom btn-block buttonAdd" data-dismiss="modal">Dodaj
+            <button class="btn btn-custom btn-block buttonAdd" data-dismiss="modal" onclick="createNewQ();">Dodaj
               <i class="fas fa-paper-plane-o ml-1"></i>
             </button>
           </div>
@@ -65,9 +70,9 @@
 
   <div class="container pb-5 pt-5">
     <h2 class=" h1 pb-5">Twoje ankiety   <a class="text-success" data-toggle="modal" data-target="#modalAdd"><i class="pl-5 fas fa-plus fa-1x" aria-hidden="true"></i></a></h2>
-
   <table id="myTable" class="table table-striped table-responsive-md btn-table">
   <thead>
+
     <tr>
       <td> Lp. </td>
       <td> Nazwa </td>
@@ -94,6 +99,7 @@
   <script type="text/javascript" src="js/mdb.js"></script>
   <!-- Your custom scripts (optional) -->
   <script type="text/javascript" src="js/create_table.js">></script>
-
+  <script type="text/javascript" src="js/logout.js">></script>
+  <script type="text/javascript" src="js/logged.js">></script>
 </body>
 </html>
