--- a/questionare.html
+++ b/questionare.html
@@ -29,9 +29,6 @@
     </button>
     <div class="collapse navbar-collapse pr-5" id="navbarSupportedContent-4">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="navbar-brand" href="admin.html" >Panel administratora</a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -44,39 +41,45 @@
     </div>
   </nav>
   <!-- Content -->
+
   <div class="container pb-5 pt-5">
+    <h2 class=" h1 pb-5">Nazwa ankiety</h2>
     <div class=" animated jumbotron text-center pt-5 mb-0 fadeInLeft">
-      <!-- Title -->
-      <h2 class="card-title h2 pb-5  my-4">Wypełnij ankiete</h2>
       <!-- Subtitle -->
       <div class="md-form input-group mb-3">
-        <input type="text" class="form-control" placeholder="Tutaj wpisz kod ankiety" aria-label="Recipient's username"
-          aria-describedby="MaterialButton-addon2">
+        <p id="question">Pytanie: 1. Kiedy kupiłeś konia?</p>
       </div>
-      <div class="input-group-append pb-5">
-        <button class="mx-auto btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Akceptuj</button>
+      <div class="text-left pb-3">
+        <!-- Group of default radios - option 1 -->
+      <div class="custom-control custom-radio pb-1">
+        <input type="radio" class="custom-control-input" id="defaultGroupExample1" name="groupOfDefaultRadios">
+        <label class="custom-control-label" for="defaultGroupExample1" id="answer1">Option 1</label>
       </div>
-    </div>
-    <div class=" animated jumbotron text-center pt-5 mb-0 fadeInRight">
-      <!-- Title -->
-      <h2 class="card-title h2 pt-5 pb-5">Wygeneruj kod</h2>
-      <div class="md-form input-group mb-3">
-        <input type="text" class="form-control" placeholder="Tutaj wpisz kod" aria-label="Recipient's username"
-          aria-describedby="MaterialButton-addon2">
+
+      <!-- Group of default radios - option 2 -->
+      <div class="custom-control custom-radio pb-1">
+        <input type="radio" class="custom-control-input" id="defaultGroupExample2" name="groupOfDefaultRadios" checked>
+        <label class="custom-control-label" for="defaultGroupExample2" id="answer2">Option 2</label>
       </div>
-      <div class="input-group-append pb-5">
-        <button class="mx-auto btn-custom  m-0 px-2" type="button" id="MaterialButton-addon2">Generuj</button>
+
+      <!-- Group of default radios - option 3 -->
+      <div class="custom-control custom-radio pb-1">
+        <input type="radio" class="custom-control-input" id="defaultGroupExample3" name="groupOfDefaultRadios">
+        <label class="custom-control-label" for="defaultGroupExample3" id="answer3">Option 3</label>
+      </div>
+
+      <!-- Group of default radios - option 3 -->
+      <div class="custom-control custom-radio pb-1">
+        <input type="radio" class="custom-control-input" id="defaultGroupExample4" name="groupOfDefaultRadios">
+        <label class="custom-control-label" for="defaultGroupExample4" id="answer4">Option 4</label>
+      </div>
+      <div class="input-group-append pt-4">
+        <button class="mx-auto btn-custom  m-0 px-2" type="button" onclick="updateQ()">Następne pytanie</button>
+      </div>
       </div>
     </div>
   </div>
-  <!-- Footer -->
-  <footer class="page-footer font-small unique-color-dark pt-4">
-    <div class="container">
-      <div class=" text-center py-3">© 2020 Copyright
-        <a href="index.html">Dominik Ustupski & Tomasz Siedlecki</a>
-      </div>
-    </div>
-  </footer>
+
   <!-- End project -->
 
   <!-- jQuery -->
@@ -88,7 +91,6 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.js"></script>
   <!-- Your custom scripts (optional) -->
-  <script type="text/javascript"></script>
-
+  <script type="text/javascript" src="js/updateQuestion.js">></script>
 </body>
 </html>
