--- a/admin.html
+++ b/admin.html
@@ -22,16 +22,13 @@
   <!-- Start project -->
   <!-- Navbar -->
   <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color pb-3" >
-    <a class="navbar-brand" href="index.html"><i class="fas fa-1x fa-magic  pl-5 pr-2 "></i> AnkietyOnline</a>
+    <a class="navbar-brand" href="index.html"><i class="fas fa-1x fa-magic  pl-1 pr-2 "></i> AnkietyOnline</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
       aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse pr-5" id="navbarSupportedContent-4">
+    <div class="collapse navbar-collapse pr-3" id="navbarSupportedContent-4">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="navbar-brand" href="admin2.html" >Panel administratora</a>
-        </li>
         <li class="nav-item">
             <a class="navbar-brand" onclick="return logout()" >Wyloguj</a>
         </li>
@@ -51,7 +48,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <form id="QForm" name="QForm" method="POST" class="text-center p-5">
+          <form id="QFormAdd" name="QFormAdd" method="POST" class="text-center p-5">
             <div class="modal-body mx-3">
               <div class="md-form mb-5">
                   <input type="text" id="QName" name="QName" class="form-control validate" required>
@@ -60,7 +57,7 @@
             </div>
           </form>
           <div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
-            <button class="btn btn-custom btn-block buttonAdd" data-dismiss="modal" onclick="createNewQ();">Dodaj
+            <button class="fill btn-block buttonAdd" data-dismiss="modal" onclick="createNewQ();">Dodaj
               <i class="fas fa-paper-plane-o ml-1"></i>
             </button>
           </div>
@@ -69,19 +66,17 @@
     </div>
 
   <div class="container pb-5 pt-5">
-    <h2 class=" h1 pb-5">Twoje ankiety   <a class="text-success" data-toggle="modal" data-target="#modalAdd"><i class="pl-5 fas fa-plus fa-1x" aria-hidden="true"></i></a></h2>
+    <h2 class=" h1 pb-5"> </h2>
   <table id="myTable" class="table table-striped table-responsive-md btn-table">
   <thead>
-
     <tr>
       <td> Lp. </td>
       <td> Nazwa </td>
-
+      <td> <a class="text-success" data-toggle="modal" data-target="#modalAdd"><i class="pl-5 fas fa-plus fa-2x" aria-hidden="true"></i></a></td>
     </tr>
   </thead>
   <tbody>
     <tr>
-
     </tr>
   </tbody>
   </table>
