--- a/questionare.html
+++ b/questionare.html
@@ -22,20 +22,15 @@
   <!-- Start project -->
   <!-- Navbar -->
   <nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color pb-3" >
-    <a class="navbar-brand" href="index.html"><i class="fas fa-1x fa-magic  pl-5 pr-2 "></i> AnkietyOnline</a>
+    <a class="navbar-brand" href="index.html"><i class="fas fa-1x fa-magic  pl-1 pr-2 "></i> AnkietyOnline</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
       aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse pr-5" id="navbarSupportedContent-4">
+    <div class="collapse navbar-collapse pr-1" id="navbarSupportedContent-4">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user"></i> Moje konto </a>
-          <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-            <a class="dropdown-item" href="login.html">Zaloguj</a>
-          </div>
+      <li class="nav-item">
+            <a class="navbar-brand" href="admin.html" >Panel administratora</a>
         </li>
       </ul>
     </div>
@@ -47,7 +42,7 @@
     <div class=" animated jumbotron text-center pt-5 mb-0 fadeInLeft">
       <!-- Subtitle -->
       <div class="md-form input-group mb-3">
-        <p id="question">Pytanie: 1. Kiedy kupiłeś konia?</p>
+        <p id="question">Pytanie: </p>
       </div>
       <div class="text-left pb-3">
         <!-- Group of default radios - option 1 -->
@@ -70,11 +65,11 @@
 
       <!-- Group of default radios - option 3 -->
       <div class="custom-control custom-radio pb-1">
-        <input type="radio" class="custom-control-input" id="defaultGroupExample4" name="groupOfDefaultRadios">
+        <input type="radio" class="custom-control-input"  id="defaultGroupExample4" name="groupOfDefaultRadios">
         <label class="custom-control-label" for="defaultGroupExample4" id="answer4">Option 4</label>
       </div>
       <div class="input-group-append pt-4">
-        <button class="mx-auto btn-custom  m-0 px-2" type="button" onclick="updateQ()">Następne pytanie</button>
+        <button id="next" name ="next" class="mx-auto fill  m-0 px-2" type="button" onclick="nextQ()">Następne pytanie</button>
       </div>
       </div>
     </div>
@@ -91,6 +86,6 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.js"></script>
   <!-- Your custom scripts (optional) -->
-  <script type="text/javascript" src="js/updateQuestion.js">></script>
+  <script type="text/javascript" src="js/Question.js">></script>
 </body>
 </html>
