--- a/admin.html
+++ b/admin.html
@@ -51,8 +51,7 @@
           <form id="QFormAdd" name="QFormAdd" method="POST" class="text-center p-5">
             <div class="modal-body mx-3">
               <div class="md-form mb-5">
-                  <input type="text" id="QName" name="QName" class="form-control validate" required>
-                  <label data-error="wrong" data-success="right" for="inputName">Nazwa testu</label>
+                  <input type="text" id="QName" name="QName" placeholder="Nazwa testu" class="form-control validate" required>
               </div>
             </div>
           </form>
@@ -67,23 +66,21 @@
 
   <div class="container pb-5 pt-5">
     <h2 class=" h1 pb-5"> </h2>
-  <table id="myTable" class="table table-striped table-responsive-md btn-table">
-  <thead>
-    <tr>
-      <td> Lp. </td>
-      <td> Nazwa </td>
-      <td> <a class="text-success" data-toggle="modal" data-target="#modalAdd"><i class="pl-5 fas fa-plus fa-2x" aria-hidden="true"></i></a></td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-    </tr>
-  </tbody>
-  </table>
-</div>
-
+    <table id="myTable" class="table table-striped table-responsive-md btn-table">
+    <thead>
+      <tr>
+        <td> Lp. </td>
+        <td> Nazwa </td>
+        <td> <a class="text-success" data-toggle="modal" data-target="#modalAdd"><i class="pl-5 fas fa-plus fa-2x" aria-hidden="true"></i></a></td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+      </tr>
+    </tbody>
+    </table>
+  </div>
   <!-- End project -->
-
   <!-- jQuery -->
   <script type="text/javascript" src="js/jquery.js"></script>
   <!-- Bootstrap tooltips -->
