--- a/details.html
+++ b/details.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse pr-3" id="navbarSupportedContent-4">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="navbar-brand" onclick="" >Podgląd ankiety</a>
+          <a class="navbar-brand" data-toggle="modal" data-target="#modalAdd">Dodaj pytanie<i class="pl-2 fas fa-plus fa-1x" aria-hidden="true"></i></a>>
         </li>
         <li class="nav-item">
             <a class="navbar-brand" href="admin.html" >Twoje ankiety</a>
@@ -62,24 +62,20 @@
               <div class=" animated jumbotron text-center pt-5 mb-0 fadeInLeft" >
                 <div id="autoUpdate">
                   <div class="md-form">
-                    <input type="text" id="form_q1" name="form_q1" class="form-control">
+                    <input type="text" id="form_q1" placeholder="Pytanie"name="form_q1" class="form-control">
                     <label for="form1">Pytanie</label>
                   </div>
                   <div class="md-form">
-                    <input type="text" id="form_q2" class="form-control">
-                    <label for="form1">Opcja A</label>
+                    <input type="text" id="form_q2" placeholder="Opcja A"class="form-control">
                   </div>
                   <div class="md-form">
-                    <input type="text" id="form_q3" class="form-control">
-                    <label for="form1">Opcja B</label>
+                    <input type="text" id="form_q3" placeholder="Opcja B" class="form-control">
                   </div>
                   <div class="md-form">
-                    <input type="text" id="form_q4" class="form-control">
-                    <label for="form1">Opcja C</label>
+                    <input type="text" id="form_q4" placeholder="Opcja C" class="form-control">
                   </div>
                   <div class="md-form">
-                    <input type="text" id="form_q5" class="form-control">
-                    <label for="form1">Opcja D</label>
+                    <input type="text" id="form_q5" placeholder="Opcja D" class="form-control">
                   </div>
                 </div>
               </div>
@@ -96,39 +92,30 @@
   <div class="container-custom pb-5 pt-5">
     <h2 id="QrName" name="QrName" class=" h1 pb-5"></h2>
       <div class="container pb-5 pt-5">
-      <table id="QTable" class="table table-striped table-responsive-md btn-table">
+      <h2 class="card-title h1 pb-5 pt-3 my-4">Lista wygenerowanych tokenów</h2>
+      <table id="QTable" class="table table-bordered">
       <thead>
         <tr>
           <td style="font-weight: bold">LP.</td>
           <td style="font-weight: bold">Tokeny </td>
-          <td style="font-weight: bold">Stan </td>
+          <td style="font-weight: bold">Status </td>
           </tr>
       </thead>
-      <tbody>
-        <tr>
-        </tr>
-      </tbody>
       </table>
-      <table id="QTableCode" class="table table-striped table-responsive-md btn-table">
+      <h2 class="card-title h1 pb-5 pt-3 my-4">Lista wygenerowanych kodów dostępu</h2>
+      <table id="QTableCode" class="table table-bordered">
       <thead>
         <tr>
           <td style="font-weight: bold">LP.</td>
           <td style="font-weight: bold">Kody</td>
-          <td style="font-weight: bold">Stan </td>
+          <td style="font-weight: bold">Status</td>
           </tr>
       </thead>
-      <tbody>
-        <tr>
-        </tr>
-      </tbody>
       </table>
      </div>
-	<div class="  jumbotron text-center pt-5 mb-0 ">
-      <h2 class="card-title h2 pt-5 pb-5">Dodaj nowe pytania<a class="text-success" data-toggle="modal" data-target="#modalAdd"><i class="pl-5 fas fa-plus fa-1x" aria-hidden="true"></i></a></h2>
-    </div>
-    <div class="  jumbotron text-center pt-5 mb-0 ">
+    <div class="  jumbotron text-center pt-3 mb-0 ">
       <!-- Title -->
-      <h2 class="card-title h2 pb-5  my-4">Generuj tokeny</h2>
+      <h2 class="card-title h2 pb-4  my-4">Generuj tokeny</h2>
       <p class="h4 mb-4 warningInfo" id="warningInfo"></p>
       <p class="h4 mb-4 successInfo" id="successInfo"></p>
       <!-- Subtitle -->
@@ -140,7 +127,7 @@
         <button class="mx-auto fill  m-0 px-2" type="button" id="MaterialButton-addon2" onclick="createToken();">Generuj</button>
       </div>
     </div>
-    <div class="jumbotron text-center pt-5 mb-0 ">
+    <div class="jumbotron text-center pt-3 mb-0 ">
       <!-- Title -->
       <h2 class="card-title h2 pt-5 pb-5">Generuj kod</h2>
       <p class="h4 mb-4 warningInfo " id="warningInfoC"></p>
