--- a/detailsmore.html
+++ b/detailsmore.html
@@ -88,8 +88,6 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.js"></script>
   <!-- Your custom scripts (optional) -->
-  <script type="text/javascript" src="js/logout.js">></script>
-  <script type="text/javascript" src="js/logged.js">></script>
-  <script type="text/javascript" src="js/details.js">></script>
+  <script type="text/javascript" src="js/more.js">></script>
 </body>
 </html>
