--- a/questionare.html
+++ b/questionare.html
@@ -68,6 +68,19 @@
         <input type="radio" class="custom-control-input"  id="defaultGroupExample4" name="groupOfDefaultRadios">
         <label class="custom-control-label" for="defaultGroupExample4" id="answer4">Option 4</label>
       </div>
+        <h2 class=" h1 pb-5"> </h2>
+        <table id="answers" class="table table-striped btn-table">
+        <thead>
+          <tr>
+            <td style="font-weight: bold"> Pytanie </td>
+            <td style="font-weight: bold"> Odpowiedź </td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+          </tr>
+        </tbody>
+        </table>
       <div class="input-group-append pt-4">
         <button id="next" name ="next" class="mx-auto fill  m-0 px-2" type="button" onclick="nextQ()">Następne pytanie</button>
       </div>
