--- a/confirmation.html
+++ b/confirmation.html
@@ -36,21 +36,35 @@
     </div>
   </nav>
   <!-- Content -->
-  <div class="container pb-5 pt-5">
-    <h2 class=" h1 pb-5"> </h2>
-    <table id="myTableAnswer" class="table table-striped btn-table">
-    <thead>
-      <tr>
-        <td style="font-weight: bold"> Pytanie </td>
-        <td style="font-weight: bold"> Odpowiedź </td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-      </tr>
-    </tbody>
-    </table>
-    <p class="font-weight-bold" id="authCode"></p>
+  <div class="container my-5 ">
+
+
+    <!--Section: Content-->
+    <section class="dark-grey-text">
+
+      <div class="row pr-lg-5">
+        <div class="col-md-7 mb-4">
+
+          <div class="view">
+            <img src="https://mdbootstrap.com/img/illustrations/graphics(4).png" class="img-fluid" alt="smaple image">
+          </div>
+
+        </div>
+        <div class="col-md-5 d-flex align-items-center">
+          <div>
+
+            <h3 class="font-weight-bold mb-4">Pomyślnie dodano odpowiedź.</h3>
+
+          	<p>Zapisz poniższy kod by mieć pewność, że nikt nie ingerował w twoje odpowiedzi.</p>
+            <p class="font-weight-bold" id="authCode"> </p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <!--Section: Content-->
+
+
   </div>
 
   <!-- End project -->
@@ -64,6 +78,8 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.js"></script>
   <!-- Your custom scripts (optional) -->
-  <script type="text/javascript" src="js/Question_answer.js">></script>
+  <script type="text/javascript" src="js/confirmation.js">></script>
+  <script type="text/javascript"src="js/login.js"></script>
+  <script type="text/javascript"src="js/loggedinfo.js"></script>
 </body>
 </html>
