--- a/questionare.html
+++ b/questionare.html
@@ -99,6 +99,8 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.js"></script>
   <!-- Your custom scripts (optional) -->
+  <script type="text/javascript" src="js/logout.js">></script>
+  <script type="text/javascript" src="js/logged.js">></script>
   <script type="text/javascript" src="js/Question.js">></script>
 </body>
 </html>
