--- a/confirmation.html
+++ b/confirmation.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Ankiety online</title>
   <!-- MDB icon -->
-  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
+  <link rel="icon" href="" type="image/x-icon">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
@@ -35,40 +35,24 @@
       </ul>
     </div>
   </nav>
-  <!-- Content -->
-  <div class="container my-5 ">
-
-
-    <!--Section: Content-->
-    <section class="dark-grey-text">
-
-      <div class="row pr-lg-5">
-        <div class="col-md-7 mb-4">
-
-          <div class="view">
-            <img src="https://mdbootstrap.com/img/illustrations/graphics(4).png" class="img-fluid" alt="smaple image">
-          </div>
-
-        </div>
-        <div class="col-md-5 d-flex align-items-center">
-          <div>
-
-            <h3 class="font-weight-bold mb-4">Pomyślnie dodano odpowiedź.</h3>
-
-          	<p>Zapisz poniższy kod by mieć pewność, że nikt nie ingerował w twoje odpowiedzi.</p>
-            <p class="font-weight-bold" id="authCode"> </p>
-          </div>
+<div class="container pt-3 pb-b mt-5">
+  <section class="">
+    <div class="row">
+      <div class="col-lg-5 col-md-12 mb-lg-0 mb-4">
+        <div class="view overlay rounded z-depth-1 mb-lg-0 mb-4">
+          <img src="" class="pt-3 pb-3 ml-auto mr-auto" alt="QR_Code" title="" id="QRim2g"/> </img>
+          <a><div class="mask rgba-white-slight"></div></a>
         </div>
       </div>
-
-    </section>
-    <!--Section: Content-->
-
-
-  </div>
-
+      <div class="col-lg-7 col-md-6 mb-md-0 mb-4 mt-xl-4">
+         <h3 class="font-weight-normal mb-4">Pomyślnie dodano odpowiedź</h3>
+         <p class="text-muted">Zapisz poniższy kod by mieć pewność, że nikt nie ingerował w twoje odpowiedzi lub zrób zrzut ekranu z widocznym kodem QR.</p>
+         <p class="text-justify font-weight-bold" id="authCode"> </p>
+      </div>
+    </div>
+  </section>
+</div>
   <!-- End project -->
-
   <!-- jQuery -->
   <script type="text/javascript" src="js/jquery.js"></script>
   <!-- Bootstrap tooltips -->
@@ -79,7 +63,5 @@
   <script type="text/javascript" src="js/mdb.js"></script>
   <!-- Your custom scripts (optional) -->
   <script type="text/javascript" src="js/confirmation.js">></script>
-  <script type="text/javascript"src="js/login.js"></script>
-  <script type="text/javascript"src="js/loggedinfo.js"></script>
 </body>
 </html>
