--- a/questionare.html
+++ b/questionare.html
@@ -39,6 +39,7 @@
 
   <div class="container pb-5 pt-5">
     <div class=" animated jumbotron text-center pt-5 mb-0 fadeInLeft">
+    <label class="" id="CountQ"></label>
       <!-- Subtitle -->
         <p class="ml-auto mr-auto successInfo text-center" id="infoSuccess"></p>
       <div class="md-form input-group mb-3">
@@ -99,8 +100,7 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.js"></script>
   <!-- Your custom scripts (optional) -->
-  <script type="text/javascript" src="js/logout.js">></script>
-  <script type="text/javascript" src="js/logged.js">></script>
+
   <script type="text/javascript" src="js/Question.js">></script>
 </body>
 </html>
